# models/payments.go
@@ -13,11 +13,12 @@ import (
 type Payments struct {
 	PaymentId      int64 `orm:"auto"`
 	InitiatedBy    int64
-	TransactionId  int64
-	Sender         int64
-	Reciever       int64
+	Transaction    *Transactions `orm:"rel(fk)"`
+	Sender         *Customers    `orm:"rel(fk);column(sender)"`
+	Reciever       *Users        `orm:"rel(fk);column(reciever)"`
 	Amount         float64
-	PaymentMethod  int64
+	PaymentMethod  *Payment_methods `orm:"rel(fk);column(payment_method)"`
+	PaymentProof   string           `orm:"null"`
 	Status         int64
 	PaymentAccount int
 	DateCreated    time.Time `orm:"type(datetime)"`
